[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/enemy/sprites/enemy-1.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/sprites/enemy-2.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/enemy.gd" type="Script" id=3]
[ext_resource path="res://assets/enemy/Explosion.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "enemy",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.5, 13 )

[node name="Area2D" type="Area2D" groups=["enemy"]]
script = ExtResource( 3 )
Explosion = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "enemy"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -12, -12, 25, 28 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 16 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
